kustomize/mako-api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mako-api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: mako-api-gateway
